{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 23,
  "lineage": "38034bc1-f6ea-a28d-d0a9-61f30d0244b0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_vpc",
      "name": "private_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:vpc/vpc-064916ff2ac6c2fd0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01f2a3f6991502220",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7ebe8d04",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-064916ff2ac6c2fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05150d36c748c3a97",
            "owner_id": "350102312519",
            "state": "available",
            "tags": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "private-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04902260ca3d33422",
            "arn": "arn:aws:ec2:us-east-1:350102312519:instance/i-03002fe49ee581f7e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03002fe49ee581f7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfdd6cb4ba93d03a",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_ip": "10.0.1.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d1f2993b242d608",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ecd5261a4b30ef0",
            "tags": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "private-vm"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "private-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0907fd0ae1247d140"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.ssh_access",
            "module.ec2.data.aws_vpc.private_vpc",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-0907fd0ae1247d140",
            "description": "Allow access to ssh from VPC and VPN",
            "egress": [],
            "id": "sg-0907fd0ae1247d140",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPN and VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "private-ssh-access-sg"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "private-ssh-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-064916ff2ac6c2fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.data.aws_vpc.private_vpc",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:security-group/sg-0f42247847d082cdd",
            "description": "Allow access to VPN client",
            "egress": [],
            "id": "sg-0f42247847d082cdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vpn-sg",
            "name_prefix": "",
            "owner_id": "350102312519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "vpn-access-sg"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "compute",
              "Name": "vpn-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-064916ff2ac6c2fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-03ecd5261a4b30ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03ecd5261a4b30ef0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "private-subnet",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "private-subnet",
              "Tier": "Private"
            },
            "vpc_id": "vpc-064916ff2ac6c2fd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:subnet/subnet-04e64a238b6e73259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04e64a238b6e73259",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350102312519",
            "tags": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "vpn-subnet",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "vpn-subnet",
              "Tier": "Private"
            },
            "vpc_id": "vpc-064916ff2ac6c2fd0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:350102312519:vpc/vpc-064916ff2ac6c2fd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0650abbf34579971d",
            "default_route_table_id": "rtb-05150d36c748c3a97",
            "default_security_group_id": "sg-0562508d578f2e313",
            "dhcp_options_id": "dopt-7ebe8d04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-064916ff2ac6c2fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05150d36c748c3a97",
            "owner_id": "350102312519",
            "tags": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "private-vpc"
            },
            "tags_all": {
              "Environment": "self-vpn",
              "Module": "networking",
              "Name": "private-vpc"
            }
          }
        }
      ]
    }
  ]
}